<resources>
    <string name="app_name">common</string>
    <string name="mvvm">MVVM</string>
    <string name="mvp">MVP</string>
    <string name="pinned">置顶</string>
    <string name="new_text">新</string>
    <string name="answers">问答</string>
    <string name="key_store">AndroidKeyStore</string>
    <string name="encode_content">加密内容</string>
    <string name="enter_encode_hint">输入加密信息</string>
    <string name="encode">加密</string>
    <string name="decode">解密</string>
    <string name="encode_ciphertext">加密密文</string>
    <string name="decode_in_writing">解密明文</string>
    <string name="room">Room</string>
    <string name="room_insert_data">插入数据</string>
    <string name="room_delete_data">删除数据</string>
    <string name="room_update_data">修改数据</string>
    <string name="room_query_data">查询数据</string>
    <string name="cache_sql_data">缓存数据库数据</string>
    <string name="notification">Notification</string>
    <string name="notification_normal">普通通知</string>
    <string name="notification_importance">重要通知</string>
    <string name="notification_progress">进度条通知</string>
    <string name="notification_big_text">大文本通知</string>
    <string name="notification_big_picture">大图片通知</string>
    <string name="notification_customer">自定义通知</string>
    <string name="notification_title">通知标题</string>
    <string name="notification_content">通知内容</string>
    <string name="notification_big_content">通知是Android在你的应用UI外显示的一条消息，用于向用户提供提醒、其他人的通信或其他来自你的应用的及时信息。用户可以点击通知打开你的应用，或者直接从通知中采取行动。</string>
    <string name="notification_customer_stop">暂停</string>
    <string name="notification_customer_complete">完成</string>
    <string name="notification_customer_content">终日奔波苦，一刻不得闲</string>
    <string name="notification_customer_title">凡人歌</string>
    <string name="interval">Interval</string>
    <string name="interval_start">开始</string>
    <string name="interval_pause">暂停</string>
    <string name="interval_resume">继续</string>
    <string name="interval_reset">重置</string>
    <string name="interval_switch">切换</string>
    <string name="interval_stop">结束</string>
    <string name="interval_cancel">取消</string>
    <string name="interval_complete">时间完成</string>
    <string name="dialog">Dialog</string>
    <string name="dialog_top">顶部弹出</string>
    <string name="dialog_center">居中弹出</string>
    <string name="dialog_bottom">底部弹出</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_content">床前明月光，\n疑是地上霜，\n举头望明月，\n低头思故乡低头思故乡。</string>
    <string name="dialog_content_line">床前明月光，疑是地上霜，举头望明月，低头思故乡。</string>
    <string name="dialog_arbitrary_position">任意位置</string>
    <string name="dialog_attach_horizontal">水平</string>
    <string name="dialog_attach_bubble_horizontal">水平气泡</string>
    <string name="dialog_attach_vertical">垂直</string>
    <string name="dialog_attach_bubble_vertical">垂直气泡</string>
    <string name="dialog_full_screen">全屏弹出</string>
    <string name="dialog_soft_top">输入法之上</string>
    <string name="dialog_position">自由定位</string>
    <string name="dialog_drop_down">下拉</string>
    <string name="dialog_side_draw">侧滑</string>
    <string name="permission">Permission</string>
    <string name="permission_explain">权限说明</string>
    <string name="to_accredit">去授权</string>
    <string name="permission_camera">申请相机权限</string>
    <string name="permission_camera_desc">相机权限申请用途于拍照及扫码</string>
    <string name="permission_location">申请定位权限</string>
    <string name="permission_location_desc">定位权限申请用途于推荐附近及精准距离</string>
    <string name="permission_description">获取权限失败，请手动授予权限</string>
    <string name="permission_bluetooth">申请蓝牙权限</string>
    <string name="permission_notification">申请通知权限</string>
    <string name="permission_install">申请安装包权限</string>
    <string name="permission_wifi">申请 WIFI 权限</string>
    <string name="permission_audio">申请麦克风权限</string>
    <string name="permission_storage">申请文件权限</string>
    <string name="permission_media">申请媒体权限</string>
    <string name="permission_apply_success">权限申请成功</string>
    <string name="permission_apply_failed">权限申请失败</string>
    <string name="image_loader">ImageLoader</string>
</resources>