<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:bl_corners_topLeftRadius="12dp"
    app:bl_corners_topRightRadius="12dp"
    app:bl_solid_color="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_666666"
        android:hint="@string/dialog_soft_top"
        android:background="@null"
        app:bl_corners_radius="4dp"
        app:bl_stroke_width="1dp"
        app:bl_solid_color="@color/white"
        app:bl_stroke_color="@color/base_theme"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_666666"
        android:text="@string/dialog_content_line"
        android:textSize="12sp"
        android:padding="20dp"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/dialog_cancel"
        android:textColor="@color/white"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textSize="14sp"
        android:gravity="center"
        app:bl_corners_radius="25dp"
        app:bl_solid_color="@color/base_theme"/>

</LinearLayout>