<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/themeBackground">

        <include
            android:id="@+id/appbar"
            layout="@layout/common_title_bar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:gravity="center"
            app:bl_corners_radius="12dp"
            app:bl_solid_color="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/base_theme"
                android:minHeight="100dp"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                app:bl_corners_radius="12dp"
                app:bl_stroke_width="1dp"
                app:bl_solid_color="@color/white"
                app:bl_stroke_color="@color/base_theme"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/interval_start"
                android:gravity="center"
                android:padding="12dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:bl_corners_radius="25dp"
                app:bl_solid_color="@color/base_theme"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_pause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/interval_pause"
                android:gravity="center"
                android:padding="12dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:bl_corners_radius="25dp"
                app:bl_solid_color="@color/base_theme"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_resume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/interval_resume"
                android:gravity="center"
                android:padding="12dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:bl_corners_radius="25dp"
                app:bl_solid_color="@color/base_theme"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/interval_reset"
                android:gravity="center"
                android:padding="12dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:bl_corners_radius="25dp"
                app:bl_solid_color="@color/base_theme"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/interval_switch"
                android:gravity="center"
                android:padding="12dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:bl_corners_radius="25dp"
                app:bl_solid_color="@color/base_theme"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/interval_stop"
                android:gravity="center"
                android:padding="12dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:bl_corners_radius="25dp"
                app:bl_solid_color="@color/base_theme"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/interval_cancel"
                android:gravity="center"
                android:padding="12dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:bl_corners_radius="25dp"
                app:bl_solid_color="@color/base_theme"/>

        </LinearLayout>

    </LinearLayout>

</layout>